--- a/ListaCompras/app/src/main/res/layout/activity_main.xml
+++ b/ListaCompras/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
         android:id="@+id/txt_produto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nome do Produto" />
+        android:hint="@string/nome_produto" />
     <Button
         android:id="@+id/btn_inserir"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Inserir" />
+        android:text="@string/inserir" />
     <ListView
         android:id="@+id/list_view_produtos"
         android:layout_width="wrap_content"
