--- a/ListaCompras/app/src/main/res/layout/activity_main.xml
+++ b/ListaCompras/app/src/main/res/layout/activity_main.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:padding="16dp" >
 
-    <EditText
-        android:id="@+id/txt_produto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/nome_produto" />
+<!--    <EditText-->
+<!--        android:id="@+id/txt_produto"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:hint="@string/nome_produto" />-->
     <Button
-        android:id="@+id/btn_inserir"
+        android:id="@+id/btn_adicionar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/inserir" />
+        android:text="@string/adicionar_itens" />
+    <TextView
+        android:id="@+id/txt_total"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/total"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:padding="10dp" />
     <ListView
         android:id="@+id/list_view_produtos"
         android:layout_width="wrap_content"
