Continuacao do upgrade do projeto Lista Compras - Complemento do cadastrdo na lista de produtos e Acesso a galeria para imagem do produto

--- a/ListaCompras/app/src/main/res/layout/activity_main.xml
+++ b/ListaCompras/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:padding="10dp" />
     <ListView
         android:id="@+id/list_view_produtos"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
