Finalizacao Projeto - Calculadora Bitcoin(Requisicao da cotacao e calculo da quantidade)

--- a/CalculadoraBitcoin/app/src/main/res/layout/bloco_entrada.xml
+++ b/CalculadoraBitcoin/app/src/main/res/layout/bloco_entrada.xml
@@ -13,6 +13,7 @@
         android:id="@+id/txt_valor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="numberDecimal"
         android:hint="@string/ex_valor" />
     <Button
         android:id="@+id/btn_calcular"
